# GatoBot

./: .gitignore  .gitmodules  CMakeLists.txt  InstallDLL.py  LICENSE  README.md  about.md  macro.gatobot  mod.json
geode/: CMakeLists.txt  README.md  about.md  build.bat  mod.json  support.md
geode/src/: main.cpp
libraries/: subprocess.hpp
src/: ConvertTools.hpp  Debug.hpp  FFmpeg.cpp  FFmpeg.hpp  GatoBot.cpp  GatoBot.hpp  GatoBotMenu.cpp  GatoBotMenu.hpp  LoadingCircle.cpp  LoadingCircle.hpp  Record.cpp  RecordPopup.cpp  RecordPopup.hpp  Render.cpp  Replay.cpp  ScrollNode.cpp  ScrollNode.hpp  Settings.cpp  Settings.hpp  SettingsPopup.cpp  SettingsPopup.hpp  hooks.cpp  hooks.hpp  includes.hpp  main.cpp
src/core/: Bot.cpp  Bot.hpp  Record.cpp  Render.cpp  Replay.cpp  Types.hpp
src/core/macro/: Macro.cpp  Macro.hpp
src/core/renderer/: AudioNode.cpp  AudioNode.hpp  Encoder.cpp  Encoder.hpp  FMODCapture.cpp  FMODCapture.hpp
src/geode/: main.cpp
src/hooks/: CCScheduler.cpp  CheckpointObject.cpp  GJBaseGameLayer.cpp  GJEffectManager.cpp  GLHooks.cpp  PauseLayer.cpp  PlayLayer.cpp
src/nodes/: GBAlertLayer.hpp  GLAlertLayer.cpp  HighlightedButton.cpp  OverlayLayer.cpp  OverlayLayer.hpp  StatusSettingsPopup.cpp  StatusSettingsPopup.hpp
src/nodes/layers/: AudioSettingsLayer.cpp  AudioSettingsLayer.hpp  GBAlertLayer.cpp  GBAlertLayer.hpp  OverlayLayer.cpp  OverlayLayer.hpp  SettingsPopup.cpp  SettingsPopup.hpp  SettingsSection.cpp  SettingsSection.hpp  VideoSettingsLayer.cpp  VideoSettingsLayer.hpp
src/nodes/template/: PopupTemplate.cpp  PopupTemplate.hpp  SettingsLayerTemplate.cpp  SettingsLayerTemplate.hpp
src/nodes/ui_nodes/: DropdownNode.cpp  DropdownNode.hpp  HighlightedButton.cpp  HighlightedButton.hpp
src/standalone/: main.cpp
